--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.6
   firebase_auth: ^4.12.1
   firebase_database: ^10.3.4
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
