--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.12.1
   firebase_database: ^10.3.4
   qr_flutter: ^4.1.0
+  barcode_scan2: ^4.3.0
 
 dev_dependencies:
   flutter_test:
