--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^10.3.4
   qr_flutter: ^4.1.0
   barcode_scan2: ^4.3.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
