--- a/mobile_app/ios/Runner/GoogleService-Info.plist
+++ b/mobile_app/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1014960409602-htf99gdtbfr6182k4j9hmn54n6phkmfc.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1014960409602-htf99gdtbfr6182k4j9hmn54n6phkmfc</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAt2PVVjnZucKz-aqlecpaPFlMXxfpstA4</string>
 	<key>GCM_SENDER_ID</key>
@@ -26,5 +30,7 @@
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1014960409602:ios:66fdda46d4f91081042b1b</string>
+	<key>DATABASE_URL</key>
+	<string>https://mobileapp-ejsiik-default-rtdb.firebaseio.com</string>
 </dict>
 </plist>
