--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   barcode_scan2: ^4.3.0
   carousel_slider: ^4.2.1
   google_sign_in: ^6.1.6
+  cloud_firestore: ^4.13.4
 
 dev_dependencies:
   flutter_test:
