--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   barcode_scan2: ^4.3.0
   carousel_slider: ^4.2.1
   google_sign_in: ^6.1.6
+  firebase_storage: ^11.5.5
 
 dev_dependencies:
   flutter_test:
