--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   carousel_slider: ^4.2.1
   google_sign_in: ^6.1.6
   cloud_firestore: ^4.13.4
+  firebase_storage: ^11.5.5
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
