--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.1.0
 
 environment:
   sdk: ">=3.1.5-140.0.dev <4.0.0"
@@ -43,7 +43,8 @@ dependencies:
   barcode_scan2: ^4.3.0
   carousel_slider: ^4.2.1
   google_sign_in: ^6.1.6
-  cloud_firestore: ^4.13.4
+  cloud_firestore: ^4.14.0
+  firebase_messaging: ^14.7.10
 
 dev_dependencies:
   flutter_test:
