--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_messaging: ^14.7.10
   connectivity: ^3.0.6
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
