--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_messaging: ^14.7.10
   connectivity: ^3.0.6
   shimmer: ^3.0.0
+  url_launcher: ^6.2.3
 
 dev_dependencies:
   flutter_test:
