--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   connectivity: ^3.0.6
   shimmer: ^3.0.0
   url_launcher: ^6.2.3
+  random_string: ^2.2.0
 
 dev_dependencies:
   flutter_test:
