--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   firebase_storage: ^11.5.5
   intl: ^0.19.0
   cloud_firestore: ^4.14.0
-  firebase_messaging: ^14.7.10
+  # firebase_messaging: ^14.7.10
   connectivity: ^3.0.6
   shimmer: ^3.0.0
   url_launcher: ^6.2.3
@@ -56,6 +56,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  fake_cloud_firestore: ^2.4.8
 flutter_icons:
   android: "launcher_icon"
   ios: true
